20120206 (S.H.)
 - configure/RELEASE - use event-R3-2-2-br_generaltime-2-0
20120109 (T.S.)
 - src/padProto.c: Fix padRequest() - resend request when retrying.
 - src/drvPadUdpComm.c: restore old behavior: starting/stopping stream
   sends drvPadUdpCommChannelsInUseMask regardless of success/failure
   status of PAD command. Make drvPadUdpCommStrmStopReq() non-blocking
   (use PADCMD_QUIET; restored old behavior). 
   New: use PADCMD_QUIET (non-blocking) for drvPadUdpCommStrmStartReq(), too. 
20120109 (T.S.)
 - src/drvPadAdcStream.c start_stop_cb must check if the 'req' parameter
   is non-NULL (which is only the case during the 'start' operation).
20110606 (T.S.)
 - drvPadUdpComm.c: fixed run-time check - need to make sure EVR is fully
   initialized. Unfortunately, that adds knowledge about EVR to
   drvPadUdpComm.c :-(
20110606 (T.S.)
 - drvPadUdpComm.c: defined TS1_OR_4_TIME for post- base-3.14.9 (bundled
   generalTime) where we use epicsTimeEventBestTime (== -1). However, 
   this requires evrTimeGet():event/evrTime.c to be modified. Added a
   run-time check for this modification and fail driver initialization
   if the check doesn't pass.
20110606 (T.S.)
 - fidProcess.c, wavBuf.c, devWfRawSig.c: include <errlog.h> to silence
   compiler warnings under base-3.14.12

20110509 (T.S.)
 - RELEASE_NOTES: updated; cut R2-1-0
20110502 (T.S.)
 - src/drvPadAdcStream.c, src/drvPadAdcStream.h: unbundled driver
   pieces that suck data from the PAD ADC FIFO into a padStream
   from BPM and added to 'udpComm'. This is quick-and-dirty
   (should probably be its own module and more complete, i.e,
   contain ISR etc. also).
20110502 (T.S.)
 - src/drvPadUdpComm.c, src/drvPadUdpComm.h, src/hostStream.c,
   src/padStream.c, src/padProto.h, src/padProtoHost.c,
   src/padStreamTestClntMain.c:
   Added now 'channels' byte to stream command request.
   Use remaining flags and CM to convey channel number in single-channel